# discord-py-framework

./: README.md  config.yaml  main.py  pyproject.toml
cogs/: misc.py
templates/: colors.py  complete_embed.py  standard_embed.py  status.py  title_embed.py
